@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 225)
-(Parent-Version lpmud 3-3 224)
+(Project-Version lpmud 3-3 226)
+(Parent-Version lpmud 3-3 225)
 (Version-Log "Corrected a bug in the new array operations.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 16 Aug 2002 23:26:52 -0600")
+(Checkin-Time "Sat, 17 Aug 2002 11:08:09 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -60,7 +60,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.7 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.42 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.288 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.289 644))
   (HISTORY (lpmud/f/49_HISTORY 1.263 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.15 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -115,7 +115,7 @@
   (src/actions.h (lpmud/d/11_actions.h 1.6.1.5 644))
   (src/actions.c (lpmud/d/12_actions.c 1.15.1.34 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.19 644))
-  (src/array.c (lpmud/d/12_array.c 1.46.1.42 644))
+  (src/array.c (lpmud/d/12_array.c 1.46.1.43 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.6 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.11 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
