@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+17-Aug-2002 (Lars Duening) (3.3.225)
+  - (array.c) In the array-array operations, the optimized handling
+        for handling short arrays didn't clean out destructed 
+        object references (reported by Markus).
+
 16-Aug-2002 (Lars Duening) (3.3.224)
   - (array.c) In the array-array operations, the algorithm didn't
         handle multiple occurances of the same value well (reported
